--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-# Ray Tracing
+Ray Tracing
 
-I am reading Ray Tracing in One Weekend by Peter Shirley
-to gain a deeper understanding of computer graphics
+I followed Ray Tracing in One Weekend by Peter Shirley
+to gain a deeper understanding in computer graphics.
